tests/ui/associated-consts/wrong-projection-self-ty-invalid-bivariant-arg2.stderr
error[E0271]: type mismatch resolving `<i32 as Proj>::Assoc == u32`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:15:5
   |
LL |     Fail::<i32, u32>::C
   |     ^^^^^^^^^^^^^^^^ type mismatch resolving `<i32 as Proj>::Assoc == u32`
   |
note: expected this to be `u32`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:5:18
   |
LL |     type Assoc = T;
   |                  ^
note: required by a bound in `Fail`
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:8:21
   |
LL | struct Fail<T: Proj<Assoc = U>, U>(T);
   |                     ^^^^^^^^^ required by this bound in `Fail`

error[E0599]: no associated item named `C` found for struct `Fail<i32, u32>` in the current scope
  --> $DIR/wrong-projection-self-ty-invalid-bivariant-arg2.rs:15:23
   |
LL | struct Fail<T: Proj<Assoc = U>, U>(T);
   | ---------------------------------- associated item `C` not found for this struct
...
LL |     Fail::<i32, u32>::C
   |                       ^ associated item not found in `Fail<i32, u32>`
   |
   = note: the associated item was found for
           - `Fail<i32, i32>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0599.
For more information about an error, try `rustc --explain E0271`.
